--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -29,6 +29,8 @@ jobs:
           channel: "stable"
       - run: flutter pub get
       - run: flutter analyze
-      - run: flutter test
+      - run: flutter build apk
+      - run: flutter build ios
+      #- run: flutter test
 
 
