--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.8.3
   path_provider: ^2.1.1
+  convex_bottom_bar: ^3.2.0
+  get_it: ^7.6.4
 
 dev_dependencies:
   flutter_test:
